--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://dreamy-kowalevski-9f6e0c.netlify.com/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "hugo-lamp"
